--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,5 +1,8 @@
 .container {
   width: 100%;
-  padding: 24px;
+  padding: 16px;
+  @media (min-width: 768px) {
+    padding: 24px;
+  }
   box-sizing: border-box;
 }
