Tabela ordenada, cor dif p/ validade proxima

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-  <app-products-table [produtos]="produtos"></app-products-table>
+  <div *ngIf="produtos">
+    <app-products-table [produtos]="produtos"></app-products-table>
+  </div>
 </div>
