Paginacao Tabela, BehaviorSubject,AddProd Service

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,3 @@
 <div class="container">
-  <div *ngIf="produtos">
-    <app-products-table [produtos]="produtos"></app-products-table>
-  </div>
+  <app-products-table></app-products-table>
 </div>
