--- a/client/src/app/components/products-table/products-table.component.html
+++ b/client/src/app/components/products-table/products-table.component.html
@@ -1,40 +1,64 @@
 <div class="table-container mat-elevation-z1">
-  <mat-table [dataSource]="produtos">
-    <ng-container matColumnDef="nome">
-      <mat-header-cell *matHeaderCellDef>Nome</mat-header-cell>
-      <mat-cell *matCellDef="let produto">{{ produto.nome }}</mat-cell>
-    </ng-container>
+  <div *ngIf="showSpinner; else table">
+    <mat-spinner diameter="60"></mat-spinner>
+  </div>
+  <ng-template #table>
+    <mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="nome">
+        <mat-header-cell *matHeaderCellDef>Nome</mat-header-cell>
+        <mat-cell *matCellDef="let produto">{{ produto.nome }}</mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="preco">
-      <mat-header-cell *matHeaderCellDef>Preco</mat-header-cell>
-      <mat-cell *matCellDef="let produto">{{
-        produto.preco | currency: "BRL"
-      }}</mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="preco">
+        <mat-header-cell *matHeaderCellDef>Preco</mat-header-cell>
+        <mat-cell *matCellDef="let produto">{{
+          produto.preco | currency: "BRL"
+        }}</mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="validade">
-      <mat-header-cell *matHeaderCellDef>Validade</mat-header-cell>
-      <mat-cell *matCellDef="let produto" [ngClass]="{'validade--proxima' : isExpirationNear(produto)}">{{
-        produto.validade | date: "shortDate"
-      }}</mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="validade">
+        <mat-header-cell *matHeaderCellDef>Validade</mat-header-cell>
+        <mat-cell
+          *matCellDef="let produto"
+          [ngClass]="{
+            'validade--proxima': isExpirationNear(produto),
+            'produto--expirado': isExpired(produto)
+          }"
+          >{{ produto.validade | date: "shortDate" }}</mat-cell
+        >
+      </ng-container>
 
-    <ng-container matColumnDef="acoes">
-      <mat-header-cell *matHeaderCellDef>Ações</mat-header-cell>
-      <mat-cell *matCellDef="let produto">
-        <div fxLayout="row wrap" fxLayoutGap="16px">
-          <button mat-raised-button color="primary" ngClass.sm="button--sm" ngClass.xs="button--sm">
-            <fa-icon [icon]="faPen"></fa-icon>Editar
-          </button>
-          <button mat-raised-button color="warn" ngClass.sm="button--sm" ngClass.xs="button--sm">
-            <fa-icon [icon]="faTrash"></fa-icon>Excluir
-          </button>
-        </div>
-      </mat-cell>
-    </ng-container>
-    <mat-header-row
-      *matHeaderRowDef="tableColumns; sticky: true"
-    ></mat-header-row>
-    <mat-row *matRowDef="let produto; columns: tableColumns"></mat-row>
-  </mat-table>
+      <ng-container matColumnDef="acoes">
+        <mat-header-cell *matHeaderCellDef>Ações</mat-header-cell>
+        <mat-cell *matCellDef="let produto">
+          <div fxLayout="row wrap" fxLayoutGap="16px">
+            <button
+              mat-raised-button
+              color="primary"
+              ngClass.sm="button--sm"
+              ngClass.xs="button--sm"
+            >
+              <fa-icon [icon]="faPen"></fa-icon>Editar
+            </button>
+            <button
+              mat-raised-button
+              color="warn"
+              ngClass.sm="button--sm"
+              ngClass.xs="button--sm"
+            >
+              <fa-icon [icon]="faTrash"></fa-icon>Excluir
+            </button>
+          </div>
+        </mat-cell>
+      </ng-container>
+      <mat-header-row
+        *matHeaderRowDef="tableColumns; sticky: true"
+      ></mat-header-row>
+      <mat-row *matRowDef="let produto; columns: tableColumns"></mat-row>
+    </mat-table>
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 20]"
+      showFirstLastButtons
+    ></mat-paginator>
+  </ng-template>
 </div>
