--- a/client/src/app/components/products-table/products-table.component.html
+++ b/client/src/app/components/products-table/products-table.component.html
@@ -45,6 +45,7 @@
               color="warn"
               ngClass.sm="button--sm"
               ngClass.xs="button--sm"
+              (click)="deleteProduto(produto)"
             >
               <fa-icon [icon]="faTrash"></fa-icon>Excluir
             </button>
