Dialog de editar produto, snackbars funcionais

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <app-product-input></app-product-input>
+  <app-product-input [onSubmit]="onSubmit"></app-product-input>
   <app-products-table></app-products-table>
 </div>
