--- a/client/src/app/components/products-table/products-table.component.html
+++ b/client/src/app/components/products-table/products-table.component.html
@@ -37,6 +37,7 @@
               color="primary"
               ngClass.sm="button--sm"
               ngClass.xs="button--sm"
+              (click)="editProduto(produto)"
             >
               <fa-icon [icon]="faPen"></fa-icon>Editar
             </button>
